# distributed-mesh-simplification

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build_all.sh  generate_mesh.py  perf.data  perf.data.old
src/: main.cpp  main_mp.cpp  qem_mp.cpp  qem_mp_v1.cpp  qem_seq.cpp
src/utils/: debug.h  logging.h  massert.h  profiling.h  utils.h
